final clean up of code

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/AlexDefrese/Defrese-Employee-Tracker#readme",
   "dependencies": {
+    "ascii-art": "^2.8.5",
     "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
